Fixes layout issues in data-explore section.

--- a/web-app/client/assets/css/new/main.css
+++ b/web-app/client/assets/css/new/main.css
@@ -2353,6 +2353,7 @@ a strong {
 
 #query-injector-input {
     width: 100%;
+    max-width: 100%;
     height: 150px;
     background: #575F74;
     color: white;
@@ -3528,7 +3529,7 @@ div.tooltip-inner {
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
     border-radius: 1000px;
-    margin-bottom: 6px;
+    max-width: 100%;
     background-color: #0000000;
     font-size: 14px;
 }
@@ -3740,6 +3741,7 @@ div.tooltip-inner {
   font-size: 100%;
   font-style: inherit;
   font-weight: inherit;
+  border: 0;
 }
 
 .dataexplore-titleholder .dataexplore-hivetable-title {
@@ -3765,11 +3767,25 @@ div.tooltip-inner {
 #query-display .table td.app-list-name.dataset-name {
   max-width: 350px;
   border-bottom: 0;
-  padding: 14px;
+  padding: 0;
+  margin: 0;
 }
+
+#query-display .table td.app-list-name.dataset-name .tablename-holder {
+  padding: 14px 0;
+}
+
+#query-display .table td.app-list-name.dataset-name .tablename-holder .arrow-right {
+  padding-right: 8px;
+}
+
 
 #query-display .table .table-name {
   border-bottom: 1px solid #EEE;
+}
+
+#query-display .table .table-name:last-child {
+  border-bottom: 0;
 }
 
 #query-display .table .table-name.selected .app-list-status.data-explore-table-name {
@@ -3777,6 +3793,7 @@ div.tooltip-inner {
 }
 #query-display .table .table-name.selected .app-list-status.data-explore-table-name:hover {
   color: white;
+
 }
 #query-tables {
   width: 30%;
@@ -3789,26 +3806,38 @@ div.tooltip-inner {
   background: white;
   vertical-align: top;
   overflow: auto;
+  border-right: 1px solid #EEE;
   height: 50vh;
 }
 #query-tables .app-list-status.data-explore-table-name {
+  vertical-align: top;
   font-size: 16px;
+  padding: 1px 0;
   display: inline-block;
+  max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .query-schema {
-    color: white;
-    overflow: auto;
+  border-bottom: 1px solid white;
+  color: white;
+  background-color: #666666;
+  overflow: auto;
 }
 
 .query-partition {
   /*margin-left: 350px;*/
+  border-bottom: 1px solid white;
+  background-color: #666666;
   color: white;
   overflow: auto;
 }
 
 #query-display .table-info {
   display: inline-block;
+  background-color: white;
   overflow: auto;
   width: 70%;
   height: 50vh;
@@ -3862,9 +3891,9 @@ div.tooltip-inner {
 .table-info .metadata-title.table-title{
   background: #EEE;
   color: #696E7E;
-  padding: 10px;
-  border-bottom: 1px solid #666666;
+  padding: 15px;
   cursor: pointer;
+
 }
 
 .table-info .query-partition .table-title:hover,
@@ -3887,6 +3916,7 @@ div.tooltip-inner {
 }
 
 #query-display .table-info .table-view .table-header {
+  background: #535353;
   width: 100%;
   display: -webkit-box;
   display: -moz-box;
@@ -3900,8 +3930,7 @@ div.tooltip-inner {
 }
 
 #query-display .table-info .table-view .table-header .table-column-title {
-  background: #535353;
-  width: 50%;
+  width: 33%;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flexbox;
@@ -3909,12 +3938,17 @@ div.tooltip-inner {
   display: -webkit-flex;
   display: flex;
   color: white;
-  padding: 10px;
+  padding: 10px 0;
   text-transform: uppercase;
   font-size: 12px;
 }
-#query-display .table-info .table-view .table-header .table-column-title:last-child {
-  padding-left: 0;
+
+#query-display .table-info .table-view .table-header .table-column-title:first-child {
+  padding: 10px;
+}
+
+#query-display .table-info .table-view .table-header .table-column-title {
+  padding-left: 2px;
 }
 
 #query-display .table-info .table-view .table-row {
@@ -3929,8 +3963,12 @@ div.tooltip-inner {
   border-bottom: 1px solid #515151;
 }
 
+#query-display .table-info .table-view .table-row:last-child {
+  border-bottom: 0;
+}
+
 #query-display .table-info .table-view .table-row span {
-  width: 50%;
+  width: 33%;
   word-break: break-all;
   display: -webkit-box;
   display: -moz-box;
@@ -3946,6 +3984,7 @@ div.tooltip-inner {
 .table-info .metadata-wrapper {
   padding: 5px 0;
   font-weight: 100;
+  background-color: #666666;
 }
 .table-info .metadata-wrapper .metadata {
   padding: 10px;
@@ -3976,23 +4015,24 @@ div.tooltip-inner {
 }
 
 .query-partition .partition-table.partition-keys-info th, .partition-table.partition-keys-info td {
-  border: 0;
+    border: 0;
     border-color: #515151;
     word-wrap: break-word;
 }
 
-.table-name:hover {
-    color: white;
-    background: #1751A3;
+#query-tables .table-name:hover{
+  background: #1751A3;
+  border-bottom: 1px solid #EEE;
 }
 
-.table-name:hover .app-list-name a {
-    color: white;
+#query-tables .table-name:hover .app-list-status.data-explore-table-name {
+  color: white;
 }
 
-.table-name:hover .app-list-name .app-list-status.data-explore-table-name {
-    color: white;
+#query-tables .table-name .app-list-status.data-explore-table-name {
+  color: #9698A5;
 }
+
 
 #query-display .table .table-name .dataset-icon {
   background-image: url("../../img/v2/dataset_store_icon_blue.png");
@@ -4000,6 +4040,9 @@ div.tooltip-inner {
   width: 20px;
   height: 20px;
   display: inline-block;
+}
+#query-display .table .table-name .dataset-icon.hidden {
+  visibility: hidden;
 }
 
 #query-display .table .table-name.selected .dataset-icon {
@@ -4073,6 +4116,9 @@ div.tooltip-inner {
 .query-table-entry:hover .lighter-color, .query-table-entry:hover .bolder-font {
     color: white;
 }
+.data-explore-results .results-table-holder {
+  overflow: auto;
+}
 
 .query-results-table-entry {
     color: white !important;
@@ -4087,7 +4133,6 @@ div.tooltip-inner {
 .query-results-table-entry > tbody > tr > td {
     background: #888888;
     color: white;
-    border-right: 1px solid #787878;
     border-bottom: 1px solid #787878;
 }
 
